@@ -1,0 +1,10 @@
+name = Scanner with Field Collection
+description = "Some helper logic for the Scanner module's tests."
+core = 7.x
+
+; Don't show this on the modules admin page.
+hidden = TRUE
+
+dependencies[] = scanner:scanner
+dependencies[] = devel_generate:devel_generate
+dependencies[] = field_collection:field_collection
